# ChiPy-Decoder-Ring

./: Buildings.csv  README.md  TESTING.md  decoder.py  dev-requirements.txt  galaxy.yml  pyproject.toml
plugins/modules/: decoder_ring.py  decoder_ring_facts.py
presentation-collateral/: ChiPy_Ansible_Modules_demo_121523.webm
python-package/: README.md  pyproject.toml
python-package/src/dmw_decoder/: __init__.py  logic.py
python-package/src/dmw_decoder/data/: Buildings.csv
python-package/tests/: example.env  functional_test_permutations.json  test_functional_tests.py  test_logic.py  util.py
src/dmw_decoder/: logic.py
tests/: test_decoder.py  test_functional_tests.py  test_integration_tests.py  test_logic.py  util.py
tests/integration/targets/decoder_ring_facts/tasks/: main.yml
tests/sanity/: ignore-2.15.txt
